--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ body .navegador label {
 body .navegador label i {
   color: rgb(168, 122, 52);
   font-size: 40px;
-  padding: 8px;
+  padding: 5px;
   cursor: pointer;
 }
 body .navegador label i:hover {
@@ -61,10 +61,10 @@ body .navegador ul li ul li {
   width: 100%;
 }
 body .navegador ul li ul li a:hover {
-  background-color: rgb(167, 135, 89);
+  background-color: rgba(168, 122, 52, 0.555);
 }
 
-@media (max-width: 900px) {
+@media (max-width: 860px) {
   .navegador {
     padding: 20px;
   }
@@ -109,6 +109,7 @@ body .navegador ul li ul li a:hover {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  background-position: center;
   height: 100vh;
   max-width: 100vw;
   display: flex;
@@ -135,33 +136,47 @@ body .navegador ul li ul li a:hover {
   border-radius: 50px;
   color: white;
   text-decoration: none;
-  margin-top: 70px;
+  margin-top: 100px;
 }
 
-main {
+@media (max-width: 860px) {
+  .headerIndex h1 {
+    font-size: 50px;
+  }
+  .headerIndex p {
+    font-size: 25px;
+  }
+}
+.mainIndex {
   background-color: rgb(235, 215, 215);
-  padding: 20px;
+  padding: 10px;
 }
-main .tarjeta1 {
+.mainIndex .tarjetas {
   display: flex;
-  flex-direction: row;
+  justify-content: center;
+}
+.mainIndex .tarjeta1 {
+  display: flex;
   justify-content: space-around;
-  margin-top: 30px;
+  flex-wrap: wrap;
+  margin: 30px;
+  padding: 10px;
 }
-main .tarjeta1 img {
-  width: 500px;
+.mainIndex .tarjeta1 img {
+  width: 450px;
   height: 250px;
 }
-main .tarjeta1 .tarjeta1-nosotros {
-  width: 500px;
+.mainIndex .tarjeta1 .tarjeta1-nosotros {
+  width: 450px;
   height: 250px;
 }
-main .tarjeta1 p {
-  margin-top: 10px;
+.mainIndex .tarjeta1 p {
+  text-align: justify;
+  padding-top: 10px;
 }
 
 footer {
-  height: 50px;
+  min-height: 50px;
   background-color: rgb(168, 122, 52);
   padding: 20px;
   display: flex;
@@ -173,6 +188,15 @@ footer .redes .fa-brands {
   font-size: 30px;
 }
 
+@media (max-width: 800px) {
+  footer {
+    flex-direction: column-reverse;
+    text-align: center;
+  }
+  footer .redes {
+    padding-bottom: 10px;
+  }
+}
 .headerMenu {
   background-image: url(/assets/img/menu.jpg);
   background-repeat: no-repeat;
