--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -18,7 +18,7 @@ body{
             i{
                 color: rgb(168, 122, 52);
                 font-size: 40px;
-                padding: 8px;
+                padding: 5px;
                 cursor: pointer;
                 &:hover{
                     border: solid 2px rgb(168, 122, 52);
@@ -59,7 +59,7 @@ body{
                         width: 100%;
                         a{
                             &:hover{
-                                background-color: rgb(167, 135, 89);
+                                background-color: rgba(168, 122, 52, 0.555);
                             }
                         }
                     }
@@ -71,7 +71,7 @@ body{
 
 // // Adaptación para pantallas pequeñas
 
-@media (max-width: 900px){
+@media (max-width: 860px){
     .navegador{
         padding: 20px;
         .checkbtn{
