Prueba imagen fondo index

--- a/src/scss/_headerIndex.scss
+++ b/src/scss/_headerIndex.scss
@@ -1,5 +1,5 @@
 .headerIndex{
-    background-image:url(/assets/img/fondo-index2.jpg);
+    background-image: url("/assets/img/fondo-index2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
