Prueba2 imagen fondo index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ body .navegador ul li ul li a:hover {
 }
 
 .headerIndex {
-  background-image: url(/assets/img/fondo-index2.jpg);
+  background-image: url("../assets/img/fondo-index2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
