--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,7 +198,7 @@ footer .redes .fa-brands {
   }
 }
 .headerMenu {
-  background-image: url(/assets/img/menu.jpg);
+  background-image: url(../img/menu.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
