--- a/src/scss/_headerMenu.scss
+++ b/src/scss/_headerMenu.scss
@@ -1,5 +1,5 @@
 .headerMenu{
-    background-image: url(/assets/img/menu.jpg);
+    background-image: url(../img/menu.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
