--- a/src/scss/_mainIndex.scss
+++ b/src/scss/_mainIndex.scss
@@ -1,6 +1,7 @@
 .mainIndex{
     background-color: rgb(235, 215, 215);
     padding: 10px;
+    width: 100%;
     .tarjetas{
         display: flex;
         justify-content: center;
@@ -9,7 +10,6 @@
             display: flex;
             justify-content: space-around;
             flex-wrap: wrap;
-            margin: 30px;
             padding: 10px;
             img{
                 width: 450px;
@@ -28,5 +28,19 @@
 
 // Adaptado para pantallas pequeñas
 
-@media (max-width: 1000px){
+@media (max-width: 500px){
+    .mainIndex{
+        img{
+            max-width: 350px;
+            height: 250px;
+            padding: 10px;
+        }
+        .imagen3{
+            min-width: 350px;
+        }
+        .tarjeta1-nosotros{
+            max-width: 350px;
+            max-height: 250px;
+        }
+    }
 }
