--- a/src/scss/_headerMenu.scss
+++ b/src/scss/_headerMenu.scss
@@ -2,6 +2,7 @@
     background-image: url("../img/menu.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     height: 100vh;
     width: 100%;
     display: flex;
@@ -10,6 +11,7 @@
     h2{
         color: white;
         font-size: 100px;
+        font-style: italic;
         padding-bottom: 50px;
     }
 }
