Agregando menú y contacto

--- a/src/scss/_headerContacto.scss
+++ b/src/scss/_headerContacto.scss
@@ -1,4 +1,4 @@
-.headerMenu{
+.headerContacto{
     background-image: url("../img/menu.jpg");
     background-repeat: no-repeat;
     background-size: cover;
