--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,3 +7,5 @@
 @import "footer.scss";
 @import "headerMenu.scss";
 @import "mainMenu.scss";
+@import "headerContacto.scss";
+@import "formulario.scss";
