--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ body .navegador ul li ul li a:hover {
 }
 
 .headerIndex {
-  background-image: url("../img/fondo-index2.jpg");
+  background-image: url("../img/fondo-index.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -215,6 +215,7 @@ footer .redes .fa-brands {
   background-image: url("../img/menu.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
   background-position: center;
   height: 100vh;
   width: 100%;
@@ -280,4 +281,91 @@ footer .redes .fa-brands {
   position: absolute;
   bottom: 15px;
   left: 48px;
+}
+
+.headerContacto {
+  background-image: url("../img/menu.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
+.headerContacto h2 {
+  color: white;
+  font-size: 100px;
+  font-style: italic;
+  padding-bottom: 50px;
+}
+
+.contacto {
+  background-color: rgb(235, 215, 215);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.contacto .formulario {
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 90%;
+  max-width: 650px;
+  padding: 5px 35px 30px 35px;
+  margin-top: 30px;
+  border-radius: 10px;
+  color: rgb(168, 122, 52);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.contacto .formulario .titulo {
+  color: rgb(168, 122, 52);
+  padding: 14px 0;
+}
+.contacto .formulario .titulo span {
+  color: white;
+}
+.contacto .formulario label {
+  font-size: 16px;
+  width: 100%;
+  margin-top: 10px;
+}
+.contacto .formulario label input {
+  background-color: rgba(0, 0, 0, 0.7);
+  border: none;
+  outline: none;
+  border-bottom: 2px solid rgb(168, 122, 52);
+  width: 100%;
+  padding: 12px;
+  margin-bottom: 20px;
+  border-radius: 2px;
+  font-size: 14px;
+  color: white;
+}
+.contacto .formulario textarea {
+  background-color: rgba(0, 0, 0, 0.7);
+  border: none;
+  outline: none;
+  border-bottom: 2px solid rgb(168, 122, 52);
+  width: 100%;
+  padding: 12px;
+  margin-bottom: 20px;
+  border-radius: 2px;
+  font-size: 14px;
+  color: white;
+  max-height: 150px;
+  min-height: 50px;
+}
+.contacto .formulario .boton {
+  width: 100%;
+  border: 1px solid black;
+  background-color: white;
+  padding: 10px 20px;
+  border-radius: 50px;
+  color: rgb(168, 122, 52);
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 20px;
 }
