--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -313,7 +313,7 @@ footer .redes .fa-brands {
   width: 90%;
   max-width: 650px;
   padding: 5px 35px 30px 35px;
-  margin-top: 30px;
+  margin: 30px;
   border-radius: 10px;
   color: rgb(168, 122, 52);
   display: flex;
@@ -332,7 +332,7 @@ footer .redes .fa-brands {
   width: 100%;
   margin-top: 10px;
 }
-.contacto .formulario label input {
+.contacto .formulario label > input {
   background-color: rgba(0, 0, 0, 0.7);
   border: none;
   outline: none;
@@ -361,11 +361,16 @@ footer .redes .fa-brands {
 .contacto .formulario .boton {
   width: 100%;
   border: 1px solid black;
-  background-color: white;
-  padding: 10px 20px;
-  border-radius: 50px;
-  color: rgb(168, 122, 52);
+  background-color: rgb(168, 122, 52);
+  font-size: 16px;
+  border: none;
+  color: white;
+  padding: 15px 0px;
+  cursor: pointer;
+  border-radius: 2px;
   text-decoration: none;
-  font-weight: bold;
-  font-size: 20px;
+  transition: all 0.5s ease;
+}
+.contacto .formulario .boton:hover {
+  background-color: rgba(168, 122, 52, 0.555);
 }
