--- a/src/scss/_formulario.scss
+++ b/src/scss/_formulario.scss
@@ -8,7 +8,7 @@
         width: 90%;
         max-width: 650px;
         padding: 5px 35px 30px 35px;
-        margin-top: 30px;
+        margin: 30px;
         border-radius: 10px;
         color: rgb(168, 122, 52);
         display: flex;
@@ -25,7 +25,7 @@
             font-size: 16px;
             width: 100%;
             margin-top: 10px;
-            input{
+            >input{
                 background-color: rgba(0,0,0,.7);
                 border: none;
                 outline: none;
@@ -55,13 +55,19 @@
         .boton{
             width: 100%;
             border: 1px solid black;
-            background-color: white;
-            padding: 10px 20px;
-            border-radius: 50px;
-            color: rgb(168, 122, 52);
+            background-color: rgb(168, 122, 52);
+            font-size: 16px;
+            border: none;
+            color: white;
+            padding: 15px 0px;
+            cursor: pointer;
+            border-radius: 2px;
             text-decoration: none;
-            font-weight: bold;
-            font-size: 20px ;
+            transition: all 0.5s ease;
+            &:hover{
+                background-color: rgba(168, 122, 52, 0.555);
+
+            }
         }
     }
 }
