--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,16 +220,31 @@ footer .redes .fa-brands {
   height: 100vh;
   width: 100%;
   display: flex;
-  align-items: flex-end;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
 }
-.headerMenu h2 {
+.headerMenu h1 {
   color: white;
   font-size: 100px;
   font-style: italic;
-  padding-bottom: 50px;
+  text-align: center;
+}
+.headerMenu p {
+  color: white;
+  font-size: 35px;
+  text-align: center;
+  padding: 5px;
 }
 
+@media (max-width: 600px) {
+  .headerMenu h1 {
+    font-size: 50px;
+  }
+  .headerMenu p {
+    font-size: 25px;
+  }
+}
 .mainMenu {
   background-color: rgb(235, 215, 215);
   padding: 10px;
@@ -292,16 +307,31 @@ footer .redes .fa-brands {
   height: 100vh;
   width: 100%;
   display: flex;
-  align-items: flex-end;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
 }
-.headerContacto h2 {
+.headerContacto h1 {
   color: white;
   font-size: 100px;
   font-style: italic;
-  padding-bottom: 50px;
+  text-align: center;
+}
+.headerContacto p {
+  color: white;
+  font-size: 35px;
+  text-align: center;
+  padding: 5px;
 }
 
+@media (max-width: 600px) {
+  .headerContacto h1 {
+    font-size: 50px;
+  }
+  .headerContacto p {
+    font-size: 25px;
+  }
+}
 .contacto {
   background-color: rgb(235, 215, 215);
   display: flex;
