--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,4 +8,10 @@
 @import "headerMenu.scss";
 @import "mainMenu.scss";
 @import "headerContacto.scss";
-@import "formulario.scss";
+@import "formularioContacto.scss";
+@import "mapa.scss";
+@import "headerReserva.scss";
+@import "formularioReserva.scss";
+@import "headerEventos.scss";
+@import "mainEventos.scss";
+
