--- a/src/scss/_mainEventos.scss
+++ b/src/scss/_mainEventos.scss
@@ -1,43 +1,34 @@
-.mainIndex{
+.mainEventos{
     background-color: rgb(235, 215, 215);
     padding: 10px;
-    .tarjetas{
-        display: flex;
-        justify-content: center;
-    }
-        .tarjeta1{
+    .contenedor{
+        .card{
             display: flex;
             justify-content: space-around;
             flex-wrap: wrap;
             padding: 10px;
+
+            .texto{
+                width: 450px;
+                height: 250px;
+                text-align: justify;
+                padding: 10px;
+            }
             img{
                 width: 450px;
                 height: 250px;
             }
-            .tarjeta1-nosotros{
-                width: 450px;
-                height: 250px;
-            }
-            p{
-                text-align: justify;
-                padding-top: 10px;
-            }
-        } 
+        }
+    }
 }
 
-// Adaptado para pantallas pequeñas
-
 @media (max-width: 500px){
-    .mainIndex{
+    .mainEventos{
         img{
             max-width: 350px;
             height: 250px;
-            padding: 10px;
         }
-        .imagen3{
-            min-width: 350px;
-        }
-        .tarjeta1-nosotros{
+        .texto{
             max-width: 350px;
             max-height: 250px;
         }
