--- a/src/scss/_mainMenu.scss
+++ b/src/scss/_mainMenu.scss
@@ -8,8 +8,8 @@
     }
     .tarjetas{
         display: flex;
-        justify-content: space-evenly;
         flex-wrap: wrap;
+        justify-content: space-around;
         gap: 30px;
         .tarjeta{
             width: 200px;
@@ -29,7 +29,9 @@
             img{
                 width: 100%;
                 height: 50%;
-
+            }
+            .vino{
+                height: 65%;
             }
             p{
                 padding-top: 10px;
