--- a/src/scss/_mainIndex.scss
+++ b/src/scss/_mainIndex.scss
@@ -39,7 +39,7 @@
         }
         .tarjeta1-nosotros{
             max-width: 350px;
-            max-height: 250px;
+            min-height: 300px;
         }
     }
 }
