--- a/src/scss/_mainEventos.scss
+++ b/src/scss/_mainEventos.scss
@@ -13,6 +13,9 @@
                 height: 250px;
                 text-align: justify;
                 padding: 10px;
+                p{
+                    padding-top: 10px;
+                }
             }
             img{
                 width: 450px;
@@ -27,10 +30,11 @@
         img{
             max-width: 350px;
             height: 250px;
+            padding: 10px;
         }
         .texto{
             max-width: 350px;
-            max-height: 250px;
+            min-height: 310px;
         }
     }
 }
