--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -269,7 +269,7 @@ footer .redes .fa-brands {
 .mainMenu .tarjetas .tarjeta {
   width: 200px;
   height: 250px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.452);
   border: 1px solid black;
   border-radius: 8px;
   text-align: center;
