--- a/src/scss/_mainMenu.scss
+++ b/src/scss/_mainMenu.scss
@@ -14,7 +14,7 @@
         .tarjeta{
             width: 200px;
             height: 250px;
-            background-color: white;
+            background-color: rgba(255, 255, 255, 0.452);
             border: 1px solid black;
             border-radius: 8px;
             text-align: center;
