--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -485,7 +485,7 @@ aside .mapa {
   width: 100%;
   margin-top: 10px;
 }
-.reserva .formulario label > input {
+.reserva .formulario label > input, .reserva .formulario label select {
   background-color: rgba(0, 0, 0, 0.7);
   border: none;
   outline: none;
