--- a/src/scss/_formularioReserva.scss
+++ b/src/scss/_formularioReserva.scss
@@ -25,7 +25,7 @@
             font-size: 16px;
             width: 100%;
             margin-top: 10px;
-            >input{
+            >input, select{
                 background-color: rgba(0,0,0,.7);
                 border: none;
                 outline: none;
